Tested on 
Motorola Vip : 1960, 1910, 1903, 1963.

VDR 1.7.29+

0.26	Fix for [undefined] in (search)timer menu when there are no (search)timers on server
	Changed Plugin check, only check if digit 1,2,3 from server ip & box ip are the same.
	Updated epgfilter for CDS on 19.2E
	Updated remote keys in settings file.
	Added parameter to script, if set script uses 'svdrpsend.pl', if not 'svdrpsend'
	Fixed show ext epg info if ext info != short info.
	Moved script to main.js
	Display shows R/F + channelnumber ('R' for Radio, 'F' for favorite)
	Skinning, CSS styling (<menu> <1> <blue> changes skin, restart needed sometimes)
	In osd timeleft can't be more 24h (Gives a long number when box has no internet or time is totally wrong)
	Timed change, set to 0 for old behavior (press ok for change)
	epginfo box was left active but invisible when pressed menu(green key didn't change audio but show epginfonext)
	add to favorite now refreshes view
	added keys from Motorola NYX remote. (Both up/down/left/right keys do the same)
	Turn record key off
	NYX remote hase no stopkey so key 'back' does the same as stop.
	Fixed Standby while playback

0.25	Get recordings from Streamdev, Restfulapi or SmartTVweb.
	Check if SmartTVweb is on the server if not turn SmartTVweb options off
	Check if Restfulapi is on the server if not turn Restfulapi options off
	Streamdev can also do Rewind, pause, Fastforward.
	Added German translation (Google Translate) so it must be corrected.
	Fixed in GuideView the functionkey information. (After pressing Yellow, Back it wasn't right)
	Duration of recording is show in Recordings list.
	In recordings listing there is an other sublevel for directories, (use subgroup_old = 0 for old version)
	In recordings listing, first sub directory is shown in Header
	Removed some old, not in use, code for recordings listings and direct local recording
	Better support for local recordings, (only 1 local recording is possible)