@@ -3366,114 +3366,66 @@ channelsnames[8027]="TV Oost";
 channels[8027]="T-8720-2214-1104";
 channelsnames[8028]="TV Gelderland";
 channels[8028]="T-0-0-1104";
-channelsnames[8029]="Radio Gelderland";
-channels[8029]="T-0-0-1111";
-channelsnames[8030]="Radio Oost";
-channels[8030]="T-8720-2214-1111";
-channelsnames[8031]="NPO Radio 1";
-channels[8031]="T-8720-2214-1112";
-channelsnames[8032]="NPO Radio 2";
-channels[8032]="T-8720-2214-1113";
-channelsnames[8033]="NPO 3FM";
-channels[8033]="T-8720-2214-1114";
-channelsnames[8034]="NPO Radio 4";
-channels[8034]="T-8720-2214-1115";
-channelsnames[8035]="NPO Radio 5";
-channels[8035]="T-8720-2214-1116";
-channelsnames[8036]="NPO Radio 6";
-channels[8036]="T-8720-2214-1117";
-channelsnames[8037]="FunX";
-channels[8037]="T-8720-2214-1119";
-channelsnames[8038]="BNR Nieuwsradio";
-channels[8038]="T-8720-2212-217";
-channelsnames[8039]="Arrow Classic Rock";
-channels[8039]="T-8720-2212-218";
-channelsnames[8040]="Radio 538";
-channels[8040]="T-8720-2212-219";
-channelsnames[8041]="BBC Radio 1";
-channels[8041]="T-8720-2244-411";
-channelsnames[8042]="BBC Radio 2";
-channels[8042]="T-8720-2244-412";
-channelsnames[8043]="BBC Radio 3";
-channels[8043]="T-8720-2244-413";
-channelsnames[8044]="BBC Radio 4";
-channels[8044]="T-8720-2244-414";
-channelsnames[8045]="SubLime FM";
-channels[8045]="T-8720-2244-415";
-channelsnames[8046]="SLAM!FM";
-channels[8046]="T-8720-2211-111";
-channelsnames[8047]="Radio 10";
-channels[8047]="T-8720-2211-112";
-channelsnames[8048]="Q-Music";
-channels[8048]="T-8720-2211-113";
-channelsnames[8049]="100%NL";
-channels[8049]="T-8720-2211-114";
-channelsnames[8050]="Classic FM";
-channels[8050]="T-8720-2211-115";
-channelsnames[8051]="SkyRadio 101 FM";
-channels[8051]="T-8720-2211-116";
-channelsnames[8052]="Radio Veronica";
-channels[8052]="T-8720-2211-117";
-channelsnames[8053]="ZDF";
-channels[8053]="T-8468-514-514";
-channelsnames[8054]="3sat";
-channels[8054]="T-8468-514-515";
-channelsnames[8055]="ZDFinfo";
-channels[8055]="T-8468-514-516";
-channelsnames[8056]="neo/KiKA";
-channels[8056]="T-8468-514-517";
-channelsnames[8057]="arte";
-channels[8057]="T-8468-6144-2";
-channelsnames[8058]="arte";
-channels[8058]="T-8468-14849-2";
-channelsnames[8059]="arte OBSOLETE";
-channels[8059]="T-8720-2214-2";
-channelsnames[8060]="PHOENIX";
-channels[8060]="T-8468-6144-3";
-channelsnames[8061]="PHOENIX OBSOLETE";
-channels[8061]="T-8720-2214-3";
-channelsnames[8062]="PHOENIX";
-channels[8062]="T-8468-14849-3";
-channelsnames[8063]="Einsfestival";
-channels[8063]="T-8468-6144-5";
-channelsnames[8064]="Einsfestival OBSOLETE";
-channels[8064]="T-8720-2214-5";
-channelsnames[8065]="Einsfestival";
-channels[8065]="T-8468-14849-5";
-channelsnames[8066]="Das Erste";
-channels[8066]="T-8468-6144-256";
-channelsnames[8067]="Das Erste OBSOLETE";
-channels[8067]="T-8720-2214-256";
-channelsnames[8068]="Das Erste";
-channels[8068]="T-8468-14849-256";
-channelsnames[8069]="hr-fernsehen";
-channels[8069]="T-0-0-65";
-channelsnames[8070]="hr-fernsehen";
-channels[8070]="T-8468-38912-65";
-channelsnames[8071]="MDR FERNSEHEN";
-channels[8071]="T-0-0-100";
-channelsnames[8072]="MDR FERNSEHEN";
-channels[8072]="T-8468-38912-100";
-channelsnames[8073]="NDR FS NDS";
-channels[8073]="T-8468-38912-129";
-channelsnames[8074]="NDR FS NDS";
-channels[8074]="T-0-0-129";
-channelsnames[8075]="NDR FS HH*";
-channels[8075]="T-0-0-130";
-channelsnames[8076]="NDR FS HH*";
-channels[8076]="T-8468-38912-130";
-channelsnames[8077]="NDR FS SH*";
-channels[8077]="T-8468-38912-131";
-channelsnames[8078]="NDR FS SH*";
-channels[8078]="T-0-0-131";
-channelsnames[8079]="NDR FS MVP*";
-channels[8079]="T-0-0-132";
-channelsnames[8080]="NDR FS MVP*";
-channels[8080]="T-8468-38912-132";
-channelsnames[8081]="WDR Köln";
-channels[8081]="T-0-0-262";
-channelsnames[8082]="WDR Köln";
-channels[8082]="T-8468-38912-262";
+channelsnames[8029]="ZDF";
+channels[8029]="T-8468-514-514";
+channelsnames[8030]="3sat";
+channels[8030]="T-8468-514-515";
+channelsnames[8031]="ZDFinfo";
+channels[8031]="T-8468-514-516";
+channelsnames[8032]="neo/KiKA";
+channels[8032]="T-8468-514-517";
+channelsnames[8033]="arte";
+channels[8033]="T-8468-6144-2";
+channelsnames[8034]="arte";
+channels[8034]="T-8468-14849-2";
+channelsnames[8035]="arte OBSOLETE";
+channels[8035]="T-8720-2214-2";
+channelsnames[8036]="PHOENIX";
+channels[8036]="T-8468-6144-3";
+channelsnames[8037]="PHOENIX OBSOLETE";
+channels[8037]="T-8720-2214-3";
+channelsnames[8038]="PHOENIX";
+channels[8038]="T-8468-14849-3";
+channelsnames[8039]="Einsfestival";
+channels[8039]="T-8468-6144-5";
+channelsnames[8040]="Einsfestival OBSOLETE";
+channels[8040]="T-8720-2214-5";
+channelsnames[8041]="Einsfestival";
+channels[8041]="T-8468-14849-5";
+channelsnames[8042]="Das Erste";
+channels[8042]="T-8468-6144-256";
+channelsnames[8043]="Das Erste OBSOLETE";
+channels[8043]="T-8720-2214-256";
+channelsnames[8044]="Das Erste";
+channels[8044]="T-8468-14849-256";
+channelsnames[8045]="hr-fernsehen";
+channels[8045]="T-0-0-65";
+channelsnames[8046]="hr-fernsehen";
+channels[8046]="T-8468-38912-65";
+channelsnames[8047]="MDR FERNSEHEN";
+channels[8047]="T-0-0-100";
+channelsnames[8048]="MDR FERNSEHEN";
+channels[8048]="T-8468-38912-100";
+channelsnames[8049]="NDR FS NDS";
+channels[8049]="T-8468-38912-129";
+channelsnames[8050]="NDR FS NDS";
+channels[8050]="T-0-0-129";
+channelsnames[8051]="NDR FS HH*";
+channels[8051]="T-0-0-130";
+channelsnames[8052]="NDR FS HH*";
+channels[8052]="T-8468-38912-130";
+channelsnames[8053]="NDR FS SH*";
+channels[8053]="T-8468-38912-131";
+channelsnames[8054]="NDR FS SH*";
+channels[8054]="T-0-0-131";
+channelsnames[8055]="NDR FS MVP*";
+channels[8055]="T-0-0-132";
+channelsnames[8056]="NDR FS MVP*";
+channels[8056]="T-8468-38912-132";
+channelsnames[8057]="WDR Köln";
+channels[8057]="T-0-0-262";
+channelsnames[8058]="WDR Köln";
+channels[8058]="T-8468-38912-262";
 channelsnames[9001]="NPO Radio1";
 channels[9001]="S23.5E-3-3211-20860";
 channelsnames[9002]="NPO Radio2";
@@ -3566,6 +3518,59 @@ channelsnames[9062]="Musicam 5";
 channels[9062]="S30.0W-2-15-19";
 channelsnames[9063]="Musicam 6";
 channels[9063]="S30.0W-2-15-20";
+channelsnames[9500]="Radio Gelderland";
+channels[9500]="T-0-0-1111";
+channelsnames[9501]="Radio Oost";
+channels[9501]="T-8720-2214-1111";
+channelsnames[9502]="NPO Radio 1";
+channels[9502]="T-8720-2214-1112";
+channelsnames[9503]="NPO Radio 2";
+channels[9503]="T-8720-2214-1113";
+channelsnames[9504]="NPO 3FM";
+channels[9504]="T-8720-2214-1114";
+channelsnames[9505]="NPO Radio 4";
+channels[9505]="T-8720-2214-1115";
+channelsnames[9506]="NPO Radio 5";
+channels[9506]="T-8720-2214-1116";
+channelsnames[9507]="NPO Radio 6";
+channels[9507]="T-8720-2214-1117";
+channelsnames[9508]="FunX";
+channels[9508]="T-8720-2214-1119";
+channelsnames[9509]="BNR Nieuwsradio";
+channels[9509]="T-8720-2212-217";
+channelsnames[9510]="Arrow Classic Rock";
+channels[9510]="T-8720-2212-218";
+channelsnames[9511]="Radio 538";
+channels[9511]="T-8720-2212-219";
+channelsnames[9512]="BBC Radio 1";
+channels[9512]="T-8720-2244-411";
+channelsnames[9513]="BBC Radio 2";
+channels[9513]="T-8720-2244-412";
+channelsnames[9514]="BBC Radio 3";
+channels[9514]="T-8720-2244-413";
+channelsnames[9515]="BBC Radio 4";
+channels[9515]="T-8720-2244-414";
+channelsnames[9516]="SubLime FM";
+channels[9516]="T-8720-2244-415";
+channelsnames[9517]="SLAM!FM";
+channels[9517]="T-8720-2211-111";
+channelsnames[9518]="Radio 10";
+channels[9518]="T-8720-2211-112";
+channelsnames[9519]="Q-Music";
+channels[9519]="T-8720-2211-113";
+channelsnames[9520]="100%NL";
+channels[9520]="T-8720-2211-114";
+channelsnames[9521]="Classic FM";
+channels[9521]="T-8720-2211-115";
+channelsnames[9522]="SkyRadio 101 FM";
+channels[9522]="T-8720-2211-116";
+channelsnames[9523]="Radio Veronica";
+channels[9523]="T-8720-2211-117";
+
+channelsnames[7001]="Beeldkrant";
+channels[7001]="T-8720-2211-117";
+ServerAdres[7]="FullURL";
+
 minChan[0] = 1;
 maxChan[0] = 954;
 baseChn[0] = 0;
@@ -3588,10 +3593,10 @@ minChan[6] = 6001;
 maxChan[6] = 6047;
 baseChn[6] = 6000;
 minChan[8] = 8001;
-maxChan[8] = 8082;
+maxChan[8] = 8058;
 baseChn[8] = 8000;
 minChan[9] = 9001;
-maxChan[9] = 9063;
+maxChan[9] = 9523;
 baseChn[9] = 9000;
 
 defChan[0] = 10  ; protChn[0] = 0;
@@ -3604,4 +3609,15 @@ defChan[6] = 6001; protChn[6] = 1;
 defChan[7] = 7000; protChn[7] = 0;
 defChan[8] = 8001; protChn[8] = 0;
 defChan[9] = 9051; protChn[9] = 0;
-Chan_Ver = "12/02/14 14:40:33" ;
+Chan_Ver = "12/04/14 18:58:19" ;
+
+
+channelsnames[7000]="BVN Multicast";
+channels[7000]="udp://239.255.0.10:11111";
+ServerAdres[7]="FullURL";
+minChan[7] = 7000;
+maxChan[7] = 7000;
+baseChn[7] = 7000;
+
+
+
